--- a/style.css
+++ b/style.css
@@ -91,14 +91,14 @@ header {
 }
 
 
-main section{
-    margin: 8rem 0;
+main > section{
+    margin: 10rem 0;
 }
 main #about-me{
-    width: 50%;
-    margin: 5rem auto;
     background-color: #fff2e9;
     padding: 6rem;
+    width: 50%;
+    margin: 10rem auto;
 }
 main #about-me > div{
     text-align: center;
@@ -114,8 +114,35 @@ main .common-paragraph{
 }
 main #about-me table{
     margin: 0 auto;
+    /* works on table */
     border-spacing: .5rem;
 }
 main #about-me th,td{
+    /* works on elemetns inside table */
     padding-right: 1rem;
+}
+
+
+main #whatido{
+    width: calc(50% + 8rem);
+    margin: 10rem auto;
+    text-align: center;
+}
+main #whatido #projects-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+}
+main #whatido #project{
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    border: 1px solid rgba(0, 0, 0, 0.07);
+    border-radius: 6px;
+    padding: 1rem;
+    width: 100%;
+    height: 18rem;
+    overflow: hidden;
+}
+main #whatido #project h4{
+    margin: .5rem;
 }
