--- a/style.css
+++ b/style.css
@@ -146,3 +146,43 @@ main #whatido #project{
 main #whatido #project h4{
     margin: .5rem;
 }
+
+
+main #resume-summary{
+    width: calc(50% + 8rem);
+    margin: 10rem auto;
+}
+main #resume-summary > h2{
+    margin-bottom: 3rem;
+    text-align: center;
+}
+
+main #resume-summary #resume-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+}
+main #resume-container #education > h2, #resume-container #experience > h2{
+    margin: 1.8rem;
+    color: rgba(0, 0, 0, 0.7);
+}
+main #resume-container #education h3, #resume-container #experience h3{
+    margin: 2rem 0 1rem 0;
+    color: rgba(0, 0, 0, 0.7);
+}
+main #resume-container #education h5, #resume-container #experience h5{
+    margin-bottom: 1.2rem;
+    color: rgba(0, 0, 0, 0.7);
+}
+main #resume-container #education p, #resume-container #experience p{
+    padding-bottom: 1.2rem;
+    color: rgba(0, 0, 0, 0.7);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+    text-align: justify;
+    line-height: 1.4rem;
+}
+main #resume-summary #btn-container{
+    margin: 2rem;
+    text-align: center;
+}
