--- a/style.css
+++ b/style.css
@@ -186,3 +186,42 @@ main #resume-summary #btn-container{
     margin: 2rem;
     text-align: center;
 }
+
+
+footer{
+    background-color: #fff2e9;
+}
+footer #contact-form{
+    width: calc(50% + 8rem);
+    margin: 0 auto;
+    display: flex;
+    gap: 3rem;
+    padding: 8rem 0;
+}
+footer #contact-form h2{
+    margin-bottom: 1rem;
+}
+footer #social{
+    width: 50%;
+}
+footer #social p{
+    line-height: 1.5rem;
+}
+footer #social .social-links{
+    display: flex;
+    margin-top: .8rem;
+    gap: 1rem;
+}
+footer #form form{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+footer #form form input, form textarea{
+    padding: 1rem;
+    border: 1px solid transparent;
+    border-radius: 6px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
